playing with material design lite.

--- a/src/TemplateCoreMaterial/Resources/Controllers/UserController.es-MX.resx
+++ b/src/TemplateCoreMaterial/Resources/Controllers/UserController.es-MX.resx
@@ -123,4 +123,7 @@
   <data name="There's already a user with the provided username." xml:space="preserve">
     <value>Ya existe un usuario con el nombre de usuario proporcionado.</value>
   </data>
+  <data name="User Deleted" xml:space="preserve">
+    <value>Usuario eliminado</value>
+  </data>
 </root>
