--- a/src/TemplateCoreMaterial/Resources/Controllers/UserController.es-MX.resx
+++ b/src/TemplateCoreMaterial/Resources/Controllers/UserController.es-MX.resx
@@ -117,13 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="There's already a user with the provided email." xml:space="preserve">
-    <value>Ya existe un usuario con el correo electrónico proporcionado.</value>
+  <data name="Email already exists" xml:space="preserve">
+    <value>El correo ya existe</value>
   </data>
-  <data name="There's already a user with the provided username." xml:space="preserve">
-    <value>Ya existe un usuario con el nombre de usuario proporcionado.</value>
+  <data name="User created" xml:space="preserve">
+    <value>Usuario creado</value>
   </data>
   <data name="User Deleted" xml:space="preserve">
     <value>Usuario eliminado</value>
+  </data>
+  <data name="Username already exists" xml:space="preserve">
+    <value>El nombre de usuario ya existe</value>
   </data>
 </root>
