--- a/src/TemplateCoreMaterial/Resources/ViewModels/User/Index.es-MX.resx
+++ b/src/TemplateCoreMaterial/Resources/ViewModels/User/Index.es-MX.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Edit User" xml:space="preserve">
-    <value>Editar Usuario</value>
+  <data name="User created" xml:space="preserve">
+    <value>Usuario creado</value>
   </data>
 </root>
