--- a/src/TemplateCoreMaterial/Resources/Views/User/Index.es-MX.resx
+++ b/src/TemplateCoreMaterial/Resources/Views/User/Index.es-MX.resx
@@ -117,11 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Actions" xml:space="preserve">
-    <value>Acciones</value>
-  </data>
   <data name="Add" xml:space="preserve">
     <value>Agregar</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancelar</value>
   </data>
   <data name="Delete" xml:space="preserve">
     <value>Eliminar</value>
@@ -132,11 +132,26 @@
   <data name="Email" xml:space="preserve">
     <value>Correo</value>
   </data>
+  <data name="Invalid email format" xml:space="preserve">
+    <value>Formato de correo inválido</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>Nombre</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>Aceptar</value>
+  </data>
+  <data name="Please enter the name" xml:space="preserve">
+    <value>Introduce el nombre</value>
+  </data>
+  <data name="Please enter the username" xml:space="preserve">
+    <value>Introduce el usuario</value>
+  </data>
   <data name="Roles" xml:space="preserve">
     <value>Perfiles</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>Actualizar</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>Nombre de usuario</value>
