--- a/src/TemplateCoreMaterial/Resources/Controllers/UserController.es-MX.resx
+++ b/src/TemplateCoreMaterial/Resources/Controllers/UserController.es-MX.resx
@@ -132,4 +132,13 @@
   <data name="User updated" xml:space="preserve">
     <value>Usuario actualizado</value>
   </data>
+  <data name="The email is a required field" xml:space="preserve">
+    <value>El correo es campo requerido</value>
+  </data>
+  <data name="The name is a required field" xml:space="preserve">
+    <value>El nombre es campo requerido</value>
+  </data>
+  <data name="The username is a required field" xml:space="preserve">
+    <value>El nombre de usuario es campo requerido</value>
+  </data>
 </root>
